--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
         "access": "public"
     },
     "dependencies": {
-        "cac": "^6.7.14"
+        "@clack/prompts": "^1.0.0",
+        "cac": "^6.7.14",
+        "find-up": "^8.0.0",
+        "glob": "^13.0.0"
     },
     "devDependencies": {
         "@antfu/eslint-config": "^6.7.3",
