--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     },
     "dependencies": {
         "@clack/prompts": "^1.0.0",
+        "boxen": "^8.0.1",
         "cac": "^6.7.14",
+        "defu": "^6.1.4",
         "find-up": "^8.0.0",
         "glob": "^13.0.0"
     },
