--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "giget": "^3.1.1",
         "glob": "^13.0.0",
         "ofetch": "^1.5.1",
+        "replace-in-file": "^8.4.0",
         "rimraf": "^6.1.2",
         "tinyexec": "^1.0.2"
     },
